Fix Brand List scrolling bug
Previously, the scrollbar would show the entire time on the the brand list.
Now this scroll bar is hidden and only shows when the user mouses over or
begins scrolling inside the brand list.

--- a/imports/ui/Filter/BrandList/BrandList.css
+++ b/imports/ui/Filter/BrandList/BrandList.css
@@ -1,5 +1,6 @@
 .brand-list {
   overflow: hidden;
+  overflow-y: hidden !important;
   outline: none;
 }
 
@@ -8,13 +9,14 @@
   outline: none;
 }
 
-label.filter-item:hover, .brand-list > div:active, .brand-list > div:focus {
-  overflow-y: auto;
+.brand-list:hover, .brand-list:active, .brand-list:focus {
+  overflow-y: auto !important;
 }
 
 .brand-list li {
   list-style: none;
   padding-left: 4px;
+  border-radius: 4px;
 }
 
 .brand-list li:hover {
